--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,2 +1,6 @@
+before_install:
+  - sdk install java 21.0.2-open
+  - sdk use java 21.0.2-open
+  - sdk install maven
 install:
-  mvn clean install -Djapicmp.skip=true -DskipTests
+  - mvn clean install -Djapicmp.skip=true -DskipTests
